Close onboarding popup on error ; Fix select alignment

--- a/src/static/stylesheets/profile.scss
+++ b/src/static/stylesheets/profile.scss
@@ -162,13 +162,15 @@
   &__message {
     font-size: 18px;
     font-weight: 300;
-    margin-bottom: 25px;
+    margin-bottom: 20px;
     text-align: center;
   }
 
   &__country-select {
-    display: block;
-    margin: 0 auto 30px;
+    align-items: center;
+    display: flex;
+    margin: 0 auto 40px;
+    min-width: 250px;
   }
 
   &__actions {
